--- a/HaveISeenThis/app/src/main/res/navigation/navigation_file.xml
+++ b/HaveISeenThis/app/src/main/res/navigation/navigation_file.xml
@@ -4,4 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_file">
 
+    <fragment
+        android:id="@+id/fragment_home"
+        android:name="com.example.haveiseenthis.views.HomeFragment"
+        android:label="fragment_home">
+    </fragment>
+
 </navigation>
