--- a/HaveISeenThis/app/src/main/res/navigation/navigation_file.xml
+++ b/HaveISeenThis/app/src/main/res/navigation/navigation_file.xml
@@ -2,7 +2,8 @@
 <navigation
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_file">
+    android:id="@+id/navigation_file"
+    app:startDestination="@id/fragment_home">
 
     <fragment
         android:id="@+id/fragment_home"
