--- a/HaveISeenThis/app/src/main/res/layout/activity_main.xml
+++ b/HaveISeenThis/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical"
     tools:context=".views.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph="@navigation/navigation_file"
+        app:defaultNavHost="true" />
 
 </LinearLayout>
